--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
+
+
+
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -8,6 +11,17 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+*{
+  box-sizing: border-box;
+}
+
+body {
+  color: #EEEEEE;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #222831;
+  scroll-behavior: smooth;
 }
 
 
